# pyDocumentChunker

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  FRD_IMPLEMENTATION_COMPARISON.md  NOTICE  README.md  VIGNETTE.md  chunk_documents.py  chunk_documents_legacy_word_split.py  chunks.jsonl  debug_ts.py  pyproject.toml  sample_paper.md  scientific_article_chunking.md  test_import.py
.github/workflows/: ci.yml
dataset/: paper_2.md  paper_3.md
sample_markdowns/: article1.md  article2.md
src/advanced_text_segmentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyDocumentChunker/: __init__.py  base.py  utils.py
src/pyDocumentChunker/integrations/: langchain.py  llamaindex.py
src/pyDocumentChunker/strategies/: code.py  recursive.py  semantic.py  sentence.py  spacy_sentence.py
src/pyDocumentChunker/strategies/structure/: html.py  markdown.py
src/py_document_chunker/: base.py
src/text_segmentation/: base.py  tokenizers.py
src/text_segmentation/integrations/: langchain.py  llamaindex.py
src/text_segmentation/strategies/: code.py  fixed_size.py  recursive.py  semantic.py  sentence.py  spacy_sentence.py
src/text_segmentation/strategies/structure/: html.py  markdown.py
tests/: test_base.py  test_code.py  test_code_java.py  test_core.py  test_fixed_size.py  test_html.py  test_langchain.py  test_llamaindex.py  test_markdown.py  test_markdown_hierarchical.py  test_markdown_new.py  test_recursive.py  test_recursive_regex.py  test_runt_handling.py  test_semantic.py  test_sentence.py  test_spacy_sentence.py  test_tokenizers.py
